tooling/nargo_cli/tests/snapshots/execute__tests__embedded_curve_ops_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "15263005405309916250",
  "abi": {
    "parameters": [
      {
        "name": "priv_key",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "pub_x",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      },
      {
        "name": "pub_y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/9VaS5LjNgyl/GtL/k7nIqRIiXRVFl4k2eUQ1IeXyKZPletkkUWySc4QuUaIMTCs0VSLbY+qXJRFCXgAH0Hwk4jP16z7Jf39oi/n4vaCd859Kd93qQllyZg4k+8E5ywSzv+BAlng2UzcJ8m/fZky380nNDoleqeU76SxKWPfhPh12stcRJa/jCNfvvRyfnq7yse2gN5d/x9zCb6BOsynn0kdDki/9HXr7rcX1/tDf58SXTE4gfFO7dMfGPyga9Pb+jexdYH8MxEORbkzIDuvg9JFawtZelM0pc6b3MrGFEEpp/KTcVqH2rjG5TrkNq9B9grZOCF2Cbx5QdgT4rN1nPYzCdEnxJW/uA70ZwTr1DEyIfoAD/UPcAx8lzJYj0wd7u+4DutJGT2crOWEsoBbtL0v17kv5TuvHYOJ8ixDz6eM7WN5BvozxkcxeJYRPPfaDHy3YbAembqE3G8YPRtGDydrTTBgzLT9NnH8NTpOgP5MROWTGvIrFyfAP9s4eDTg2TF40gE8+zh4csBzYPBkDJ5P4nMMohzC/tqhe4z7gORj22KPEZsB27D+g7iNJRuCNVK/yYd4kTF4DgN+F+S7JWPXjNTBuz8Se3dx7JWvSO49/CnBSPskZ9uZ4I8UV1j8oOuB4+fo+Pus4+clvryILzmaEBtwfj3mnQzphWeYTxwmLi7gNoNvU3Fry7kvZVm3qpIut94H74qmaStzqhvvdall2aiTt6bu/inVKt2YsnFVXTpXN1Xorpbq4vox7ePw7q8E3yP68Zg8JNI4a8f2A9D/UXkIxzlunN2J23aDb49MHZ2vcOPIjtHDyVpOKGs1oaxntxHaDLcx5XukfliM5Tvoz0TU/qeG/Lpl/Aq+2zNYj0xdQu73jJ49o4eTtZ5QVgxcNBYIccurSPOD0fkE6M9EVJ6rIb9ycRT8c4iDpwQ8RwbPdgDPpzh4DOB5ZfBw8QzP57i5GraN4n5F8uHZvTEO82FMXkX/f0vu81tfPkPu84A5wOjc59nX0LYM1iNTR2Muxz+uL3Ky1hPKelZciwi4KKcv17kvlatsN62RVeW9c3m3lVIVznmjqrbMtTK+rHXhm6aStbehbrUztq0q1c2XTO50kTKYQLa0p0Zp1+3ShKY2qhNVnLpp1Sl3pgy11lq27qRs0LZUMuS5qUonu72ayzzM2Mo8cGz139PYyo0d4LsDg/XI1FHecWuOB0YPJ2s5oazVhLJmE8qaP6mN2YSythFs5PbeaZ/Gvn1EvgzPMnHLmxh9ei5u/cr16ci5yWlozHnA/kc5xLsZgwfny7hduRyW4qb7HwljN9V9uaf5Mv4+JX7CmM99mcvc1KZtq1DVzucdK1xw9amou3XJytq6DNoEJetgXeHLIE17sqbIG2elC423VNeSwUH3E+Dd3wm+R67HPyAejN7PfoZ4wPGdOzcB33LnExJy/56zDnT9A/vw2eN5EgfPYPsljF93xJdc++E6mqNx52vWjB5O1nJCWXRsx/ZTLjzbGahI3Bw8A8Vxge5VxYh1OO5iPLMBPJHWoAf31OcMHjy2Yw5xa04U9w7Jh2fUbqqbG9sxj+hc4uUrsujZAC6HiHzmQg/F/SG77/kbf4djExcbaF7yx8fYzOYe9IwmPa+A313cwf8nwb/6QPwrgj8hGDG3lnds+4vgjxQHWfygayOufFq8Ta/fOilB7/zt6gccXwTRvyTv/9P/x7EFysU7cAbrVdA++Mvimqk99dPlwmew/wOV9myUPTMAAA==",
  "debug_symbols": "1ZxRa+JAFIX/S559mJl7587c/pVlWWxriyC2WLuwFP/7xmJE4tBy0pwHX4qW+e4ZOPkMmpCP7nF1//78Z719ennr7n59dJuXh+V+/bLt330cFt39br3ZrJ//XP67C8c/0T7Xv70ut8e3b/vlbt/dJbFFt9o+Hl+Vnn9ab1bdXQ6H34suFpioMOEokQJMRJhIMCEwoTCRYQLuPMGdJ7jzBHcucOcCdy5w5wJ3LnDnAncucOcCdy5w5wJ3rs3OJaUTIcUvicXVUs2up7VqGs6Lo32Oj9zxiTteuOOVOz5zxxt3fOGOr9zxTh2f57VWxuMjd3zijhfueOWOz9zxbWt9GK/BRmeIXGCiwoSjhDUN0BQGQnRMRJhIMCEw0TyaTIcztln6um5LcVia42XZjaVBfVgbPHy9OPYrhtX962yjA8nyrW7cbnXj5VY3Xm91436jGy/hRjbu443HW91481xRQjkxJY0/+YvAhMJEhgmDiQITFSYcJWqAiQgTcOcV7rzCnVe48wp3XuHOK9x5hTt3uHOHO3e4c4c7d7hzhzt3uHOHO3e4c4c7jyHgSMSRhCOCI4ojGUcMR5rd1zh8P6s1Hn7wc0YMlTzfufNjIM+P5PmJPF/I85U8P5PnG3n+vP7K1fxKnt/0189M/5Eex59Z7SuY3zBxApMmME0foqQzpFV/1Hj7uuesCZmeYPSEQk+o9ARnJ7SvC8+aEOkJiZ5Ad1roTgvdaaE7LXSnhe600J1WutNKd1rpTivdaaU7rXSnle600p1WutNKdzrTnc50pzPd6Ux3OtOdznSnM93pTHc6053OdKeN7rTRnTa600Z32uhOG91pozttdKeN7rTRnS50pwvd6UJ3utCdLnSny9xOX/0yWoye0HZafbhe1J9nw2XCJ1SnQD4Bal/o/w6KU6D2IV9THiDX/KPDpX17wKwJSk/I9ASjJxR6QqUnODuhfbvFrAmRnkB32ulOO91ppzvtdKed7rTTnXa20ykEekKkJyR6gtATlJ6Q6QlGTyj0hEpPoDsd6U5HutNxbqflKkHoCUpPyPQEoycUekKlJ7Sd9lzPCSWPvl6m9v1K30FxCpSmQDIF0ilQngLZFKhMgeoUaMoRIfARcejf/V3u1sv7zer0qJKn9+3DxZNL9v9eV6OHmLzuXh5Wj++71fFxJhdPMjmmJ0mLJKUf3A//Dw==",
  "file_map": {
    "16": {
      "source": "use crate::cmp::Eq;\nuse crate::hash::Hash;\nuse crate::ops::arith::{Add, Neg, Sub};\n\n/// A point on the embedded elliptic curve\n/// By definition, the base field of the embedded curve is the scalar field of the proof system curve, i.e the Noir Field.\n/// x and y denotes the Weierstrass coordinates of the point, if is_infinite is false.\npub struct EmbeddedCurvePoint {\n    pub x: Field,\n    pub y: Field,\n    pub is_infinite: bool,\n}\n\nimpl EmbeddedCurvePoint {\n    /// Elliptic curve point doubling operation\n    /// returns the doubled point of a point P, i.e P+P\n    pub fn double(self) -> EmbeddedCurvePoint {\n        embedded_curve_add(self, self)\n    }\n\n    /// Returns the null element of the curve; 'the point at infinity'\n    pub fn point_at_infinity() -> EmbeddedCurvePoint {\n        EmbeddedCurvePoint { x: 0, y: 0, is_infinite: true }\n    }\n\n    /// Returns the curve's generator point.\n    pub fn generator() -> EmbeddedCurvePoint {\n        // Generator point for the grumpkin curve (y^2 = x^3 - 17)\n        EmbeddedCurvePoint {\n            x: 1,\n            y: 17631683881184975370165255887551781615748388533673675138860, // sqrt(-16)\n            is_infinite: false,\n        }\n    }\n}\n\nimpl Add for EmbeddedCurvePoint {\n    /// Adds two points P+Q, using the curve addition formula, and also handles point at infinity\n    fn add(self, other: EmbeddedCurvePoint) -> EmbeddedCurvePoint {\n        embedded_curve_add(self, other)\n    }\n}\n\nimpl Sub for EmbeddedCurvePoint {\n    /// Points subtraction operation, using addition and negation\n    fn sub(self, other: EmbeddedCurvePoint) -> EmbeddedCurvePoint {\n        self + other.neg()\n    }\n}\n\nimpl Neg for EmbeddedCurvePoint {\n    /// Negates a point P, i.e returns -P, by negating the y coordinate.\n    /// If the point is at infinity, then the result is also at infinity.\n    fn neg(self) -> EmbeddedCurvePoint {\n        EmbeddedCurvePoint { x: self.x, y: -self.y, is_infinite: self.is_infinite }\n    }\n}\n\nimpl Eq for EmbeddedCurvePoint {\n    /// Checks whether two points are equal\n    fn eq(self: Self, b: EmbeddedCurvePoint) -> bool {\n        (self.is_infinite & b.is_infinite)\n            | ((self.is_infinite == b.is_infinite) & (self.x == b.x) & (self.y == b.y))\n    }\n}\n\nimpl Hash for EmbeddedCurvePoint {\n    fn hash<H>(self, state: &mut H)\n    where\n        H: crate::hash::Hasher,\n    {\n        if self.is_infinite {\n            self.is_infinite.hash(state);\n        } else {\n            self.x.hash(state);\n            self.y.hash(state);\n        }\n    }\n}\n\n/// Scalar for the embedded curve represented as low and high limbs\n/// By definition, the scalar field of the embedded curve is base field of the proving system curve.\n/// It may not fit into a Field element, so it is represented with two Field elements; its low and high limbs.\npub struct EmbeddedCurveScalar {\n    pub lo: Field,\n    pub hi: Field,\n}\n\nimpl EmbeddedCurveScalar {\n    pub fn new(lo: Field, hi: Field) -> Self {\n        EmbeddedCurveScalar { lo, hi }\n    }\n\n    #[field(bn254)]\n    pub fn from_field(scalar: Field) -> EmbeddedCurveScalar {\n        let (a, b) = crate::field::bn254::decompose(scalar);\n        EmbeddedCurveScalar { lo: a, hi: b }\n    }\n\n    //Bytes to scalar: take the first (after the specified offset) 16 bytes of the input as the lo value, and the next 16 bytes as the hi value\n    #[field(bn254)]\n    pub(crate) fn from_bytes(bytes: [u8; 64], offset: u32) -> EmbeddedCurveScalar {\n        let mut v = 1;\n        let mut lo = 0 as Field;\n        let mut hi = 0 as Field;\n        for i in 0..16 {\n            lo = lo + (bytes[offset + 31 - i] as Field) * v;\n            hi = hi + (bytes[offset + 15 - i] as Field) * v;\n            v = v * 256;\n        }\n        let sig_s = crate::embedded_curve_ops::EmbeddedCurveScalar { lo, hi };\n        sig_s\n    }\n}\n\nimpl Eq for EmbeddedCurveScalar {\n    fn eq(self, other: Self) -> bool {\n        (other.hi == self.hi) & (other.lo == self.lo)\n    }\n}\n\nimpl Hash for EmbeddedCurveScalar {\n    fn hash<H>(self, state: &mut H)\n    where\n        H: crate::hash::Hasher,\n    {\n        self.hi.hash(state);\n        self.lo.hash(state);\n    }\n}\n\n// Computes a multi scalar multiplication over the embedded curve.\n// For bn254, We have Grumpkin and Baby JubJub.\n// For bls12-381, we have JubJub and Bandersnatch.\n//\n// The embedded curve being used is decided by the\n// underlying proof system.\n// docs:start:multi_scalar_mul\npub fn multi_scalar_mul<let N: u32>(\n    points: [EmbeddedCurvePoint; N],\n    scalars: [EmbeddedCurveScalar; N],\n) -> EmbeddedCurvePoint\n// docs:end:multi_scalar_mul\n{\n    multi_scalar_mul_array_return(points, scalars)[0]\n}\n\n#[foreign(multi_scalar_mul)]\npub(crate) fn multi_scalar_mul_array_return<let N: u32>(\n    points: [EmbeddedCurvePoint; N],\n    scalars: [EmbeddedCurveScalar; N],\n) -> [EmbeddedCurvePoint; 1] {}\n\n// docs:start:fixed_base_scalar_mul\npub fn fixed_base_scalar_mul(scalar: EmbeddedCurveScalar) -> EmbeddedCurvePoint\n// docs:end:fixed_base_scalar_mul\n{\n    multi_scalar_mul([EmbeddedCurvePoint::generator()], [scalar])\n}\n\n/// This function only assumes that the points are on the curve\n/// It handles corner cases around the infinity point causing some overhead compared to embedded_curve_add_not_nul and embedded_curve_add_unsafe\n// docs:start:embedded_curve_add\npub fn embedded_curve_add(\n    point1: EmbeddedCurvePoint,\n    point2: EmbeddedCurvePoint,\n) -> EmbeddedCurvePoint {\n    // docs:end:embedded_curve_add\n    if crate::runtime::is_unconstrained() {\n        // `embedded_curve_add_unsafe` requires the inputs not to be the infinity point, so we check it here.\n        // This is because `embedded_curve_add_unsafe` uses the `embedded_curve_add` opcode.\n        // For efficiency, the backend does not check the inputs for the infinity point, but it assumes that they are not the infinity point\n        // so that it can apply the ec addition formula directly.\n        if point1.is_infinite {\n            point2\n        } else if point2.is_infinite {\n            point1\n        } else {\n            embedded_curve_add_unsafe(point1, point2)\n        }\n    } else {\n        // In a constrained context, we also need to check the inputs are not the infinity point because we also use `embedded_curve_add_unsafe`\n        // However we also need to identify the case where the two inputs are the same, because then\n        // the addition formula does not work and we need to use the doubling formula instead.\n        // In unconstrained context, we can check directly if the input values are the same when solving the opcode, so it is not an issue.\n\n        // x_coordinates_match is true if both abscissae are the same\n        let x_coordinates_match = point1.x == point2.x;\n        // y_coordinates_match is true if both ordinates are the same\n        let y_coordinates_match = point1.y == point2.y;\n        // double_predicate is true if both abscissae and ordinates are the same\n        let double_predicate = (x_coordinates_match & y_coordinates_match);\n        // If the abscissae are the same, but not the ordinates, then one point is the opposite of the other\n        let infinity_predicate = (x_coordinates_match & !y_coordinates_match);\n        let point1_1 = EmbeddedCurvePoint {\n            x: point1.x + (x_coordinates_match as Field),\n            y: point1.y,\n            is_infinite: x_coordinates_match,\n        };\n        // point1_1 is guaranteed to have a different abscissa than point2:\n        // - if x_coordinates_match is 0, that means point1.x != point2.x, and point1_1.x = point1.x + 0\n        // - if x_coordinates_match is 1, that means point1.x = point2.x, but point1_1.x = point1.x + 1 in this case\n        // Because the abscissa is different, the addition formula is guaranteed to succeed, so we can safely use `embedded_curve_add_unsafe`\n        // Note that this computation may be garbage: if x_coordinates_match is 1, or if one of the input is the point at infinity.\n        let mut result = embedded_curve_add_unsafe(point1_1, point2);\n\n        // `embedded_curve_add_unsafe` is doing a doubling if the input is the same variable, because in this case it is guaranteed (at 'compile time') that the input is the same.\n        let double = embedded_curve_add_unsafe(point1, point1);\n        // `embedded_curve_add_unsafe` would not perform doubling, even if the inputs point1 and point2 are the same, because it cannot know this without adding some logic (and some constraints)\n        // However we did this logic when we computed `double_predicate`, so we set the result to 2*point1 if point1 and point2 are the same\n        result = if double_predicate { double } else { result };\n\n        // Same logic as above for unconstrained context, we set the proper result when one of the inputs is the infinity point\n        if point1.is_infinite {\n            result = point2;\n        }\n        if point2.is_infinite {\n            result = point1;\n        }\n\n        // Finally, we set the is_infinity flag of the result:\n        // Opposite points should sum into the infinity point, however, if one of them is point at infinity, their coordinates are not meaningful\n        // so we should not use the fact that the inputs are opposite in this case:\n        let mut result_is_infinity =\n            infinity_predicate & (!point1.is_infinite & !point2.is_infinite);\n        // However, if both of them are at infinity, then the result is also at infinity\n        result.is_infinite = result_is_infinity | (point1.is_infinite & point2.is_infinite);\n        result\n    }\n}\n\n#[foreign(embedded_curve_add)]\nfn embedded_curve_add_array_return(\n    _point1: EmbeddedCurvePoint,\n    _point2: EmbeddedCurvePoint,\n) -> [EmbeddedCurvePoint; 1] {}\n\n/// This function assumes that:\n/// The points are on the curve, and\n/// The points don't share an x-coordinate, and\n/// Neither point is the infinity point.\n/// If it is used with correct input, the function ensures the correct non-zero result is returned.\n/// Except for points on the curve, the other assumptions are checked by the function. It will cause assertion failure if they are not respected.\npub fn embedded_curve_add_not_nul(\n    point1: EmbeddedCurvePoint,\n    point2: EmbeddedCurvePoint,\n) -> EmbeddedCurvePoint {\n    assert(point1.x != point2.x);\n    assert(!point1.is_infinite);\n    assert(!point2.is_infinite);\n    embedded_curve_add_unsafe(point1, point2)\n}\n\n/// Unsafe ec addition\n/// If the inputs are the same, it will perform a doubling, but only if point1 and point2 are the same variable.\n/// If they have the same value but are different variables, the result will be incorrect because in this case\n/// it assumes (but does not check) that the points' x-coordinates are not equal.\n/// It also assumes neither point is the infinity point.\npub fn embedded_curve_add_unsafe(\n    point1: EmbeddedCurvePoint,\n    point2: EmbeddedCurvePoint,\n) -> EmbeddedCurvePoint {\n    embedded_curve_add_array_return(point1, point2)[0]\n}\n",
      "path": "std/embedded_curve_ops.nr"
    },
    "50": {
      "source": "use std::ops::Add;\n\nfn main(priv_key: Field, pub_x: pub Field, pub_y: pub Field) {\n    let g1 = std::embedded_curve_ops::EmbeddedCurvePoint::generator();\n    let scalar = std::embedded_curve_ops::EmbeddedCurveScalar { lo: priv_key, hi: 0 };\n    // Test that multi_scalar_mul correctly derives the public key\n    let res = std::embedded_curve_ops::multi_scalar_mul([g1], [scalar]);\n    assert(res.x == pub_x);\n    assert(res.y == pub_y);\n\n    // Test that double function calling embedded_curve_add works as expected\n    let pub_point =\n        std::embedded_curve_ops::EmbeddedCurvePoint { x: pub_x, y: pub_y, is_infinite: false };\n    let res = pub_point.double();\n    let double = g1.add(g1);\n\n    assert(double.x == res.x);\n\n    // Test calling multi_scalar_mul with multiple points and scalars\n    let res = std::embedded_curve_ops::multi_scalar_mul([g1, g1], [scalar, scalar]);\n\n    // The results should be double the g1 point because the scalars are 1 and we pass in g1 twice\n    assert(double.x == res.x);\n\n    // Tests for #6549\n    let const_scalar1 = std::embedded_curve_ops::EmbeddedCurveScalar { lo: 23, hi: 0 };\n    let const_scalar2 = std::embedded_curve_ops::EmbeddedCurveScalar { lo: 0, hi: 23 };\n    let const_scalar3 = std::embedded_curve_ops::EmbeddedCurveScalar { lo: 13, hi: 4 };\n    let partial_mul = std::embedded_curve_ops::multi_scalar_mul(\n        [g1, double, pub_point, g1, g1],\n        [scalar, const_scalar1, scalar, const_scalar2, const_scalar3],\n    );\n    assert(partial_mul.x == 0x2024c4eebfbc8a20018f8c95c7aab77c6f34f10cf785a6f04e97452d8708fda7);\n    // Check simplification by zero\n    let zero_point = std::embedded_curve_ops::EmbeddedCurvePoint { x: 0, y: 0, is_infinite: true };\n    let const_zero = std::embedded_curve_ops::EmbeddedCurveScalar { lo: 0, hi: 0 };\n    let partial_mul = std::embedded_curve_ops::multi_scalar_mul(\n        [zero_point, double, g1],\n        [scalar, const_zero, scalar],\n    );\n    assert(partial_mul == g1);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
