tooling/nargo_cli/tests/snapshots/execute__tests__encrypted_log_regression_force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "13118098139531179877",
  "abi": {
    "parameters": [
      {
        "name": "eph_pk_bytes",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        },
        "visibility": "private"
      },
      {
        "name": "incoming_header_ciphertext",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        },
        "visibility": "private"
      },
      {
        "name": "incoming_body_ciphertext",
        "type": {
          "kind": "array",
          "length": 9,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        },
        "visibility": "private"
      },
      {
        "name": "flag",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 15,
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 8
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/82XaY7CMAyFU8pStmH2vXOGpElo8m+uQkW5/xHgiUag4n/Ukp8UpXqVrH51FjtTZ5Wn8dc9Z6eRdzNU9LyM8EaElxPemPAmhDclvBnhFYQ3J7wF4S0Jb0V4a8J7uPo/af7vZqu3zrV11RprdrqKTfDa+WYbTDA++H0VrG2DC3VsYq2jcbY1Bx/tQZ+levFTXH2fzGa4WJqDO2PifhTOPWLifhLOnTNxPwvnHjNxvwzMnTT0d74Kz8+EKT9vwrmnTNzvwrlnTNwfwrkLJu5P4dxzJu4v4dwLJu5v4dxLJu4f4dwrJu5f4dxrJu5yQO7UC0MbdVHqpfPuPWoR3Mup98XZhX2MNY38JlbVi4UZfQ96ANTDqA1Rd6EGwX2MuwnnNM4s7F+sZeS1VLc6AoUZgnUkEAAA",
  "debug_symbols": "XYxLCoAwDAXvkrUn8Coi0k9aAqEpsRWk9O5+cCFdzhveNPBoa9woBdlhXhqwOFNI0k2tT2CVmCluw3wYJWMZPww1uZ8tZ8bhn1Uc+qr4lF7X134B",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
